--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <ul class="navbar-nav gap-4">
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" id="company" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                company
+                company <i class="myDropIcon fa-solid fa-angle-down"></i>
               </a>
               <ul class="dropdown-menu" aria-labelledby="company">
                 <li class="col-lg-2 me-0 d-inline-flex">
@@ -58,8 +58,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" id="services" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                services
-              </a>
+                services <i class="myDropIcon fa-solid fa-angle-down"></i></a>
               <ul class="dropdown-menu" aria-labelledby="services">
                 <li class="col-lg-2 me-0 d-inline-flex"> 
                   <ul style="list-style: none;">
@@ -114,8 +113,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" id="works" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                works
-              </a>
+                works <i class="myDropIcon fa-solid fa-angle-down"></i></a>
               <ul class="dropdown-menu" aria-labelledby="works">
                 <li class="col-lg-2 me-0 d-inline-flex">
                   <ul style="list-style: none;">
@@ -141,8 +139,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" id="careers" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                careers
-              </a>
+                careers <i class="myDropIcon fa-solid fa-angle-down"></i></a>
               <ul class="dropdown-menu" aria-labelledby="careers">
                 <li class="col-lg-2 me-0 d-inline-flex">
                   <ul style="list-style: none;">
